[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinykv"
authors = [{name = "Flavio Veloso Soares", email = "flaviovs@magnux.com"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-docstrings",
  "flake8-tidy-imports",
  "flake8-walrus",
  'flake8',
  'flit',
  'mypy',
  'pylint',
  'taskipy',
]

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "flake8 && mypy && pylint tinykv tests"
pre-commit = "task test && task lint"

[tool.mypy]
files = "."
python_version = "3.7"
exclude = [".git", ".venv"]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.pylint.master]
ignore = [".git", ".venv"]
ignore-patterns = '^\.#'
load-plugins = [
  'pylint.extensions.bad_builtin',
  'pylint.extensions.check_elif',
  'pylint.extensions.docparams',
  'pylint.extensions.docstyle',
  'pylint.extensions.overlapping_exceptions',
]
jobs = 0

[tool.pylint.basic]
good-names = [
  "db", "k", "v",
]


[tool.pylint.messages_control]
disable = [
   # docstring checks already done by flake8.
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
]
