[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinykv"
authors = [{name = "Flavio Veloso Soares", email = "flaviovs@magnux.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python", "sqlite", "sqlite3", "key-value store", "kv"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"

dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/flaviovs/tinykv"
Repository = "https://github.com/flaviovs/tinykv"
Issues = "https://github.com/flaviovs/tinykv/issues"

[project.optional-dependencies]
dev = [
  "codespell",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-docstrings",
  "flake8-tidy-imports",
  "flake8-walrus",
  'flake8',
  'flit',
  'mypy',
  'pylint',
  'taskipy',
]

[tool.codespell]
skip = '*~,./.git,./.venv,./.mypy_cache,./dist'

[tool.taskipy.tasks]
spellcheck = "codespell"
test = "python -m unittest tests/test_*.py"
lint = "flake8 && mypy && pylint src tests"
pre-commit = "task spellcheck && task test && task lint"

[tool.mypy]
files = "."
python_version = "3.7"
exclude = [".git", ".venv"]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.pylint.master]
ignore = [".git", ".venv"]
ignore-patterns = '^\.#'
load-plugins = [
  'pylint.extensions.bad_builtin',
  'pylint.extensions.check_elif',
  'pylint.extensions.docparams',
  'pylint.extensions.docstyle',
  'pylint.extensions.overlapping_exceptions',
]
jobs = 0

[tool.pylint.basic]
good-names = [
  "db", "k", "v",
]


[tool.pylint.messages_control]
disable = [
   # docstring checks already done by flake8.
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "too-many-return-statements",
]
